Try fill-available to avoid issues on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -65,6 +65,7 @@ body>header {
   height: 100vh;
   overflow: hidden;
   padding-top: calc(var(--scroll) * 100vh);
+  min-height: fill-available;
 }
 
 
